# mtensor

./: .appveyor.yml  .clang-format  .editorconfig  .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Jenkinsfile  LICENSE  README-zh.md  README.md  mtensor.hpp  tensor.dox
.github/: ISSUE_TEMPLATE.md
benchmark/: CMakeLists.txt  bm_algorithm.cpp  bm_algorithm.hpp  bm_binary_operator.cpp  bm_binary_operator.hpp  bm_config.hpp  bm_conv.cpp  bm_conv.hpp  bm_cpu_fp.cpp  bm_for_index.cpp  bm_image_split_channel.cpp  bm_image_split_channel.hpp  bm_main.cpp  bm_matrix_multiply.cpp  bm_mem_copy.cpp  bm_mem_copy.hpp  bm_omp_for_index.cpp  bm_view.cpp  bm_view.hpp  common_benchmark.cu  common_bm.cu  conv_benchmark.cu  conv_bm.cpp  conv_bm.cu  expr_depthwise_conv_bm.cpp  expr_pointwise_conv_bm.cpp  for_each_benchmark.cu  for_each_bm.cu  for_index_bm.cu  lambda_tensor_benchmark.cu  lambda_tensor_bm.cu  main.cpp  main.cu  mem_copy_benchmark.cu  omp_bm.cpp  padding_layout.hpp  prod.cpp  prod_bm.cpp  prod_bm.cu  stride_benchmark.cu  (+7 more)
benchmark/cuda/: CMakeLists.txt  algorithm_bm.cu  bm_algorithm.cu  bm_binary_operator.cu  bm_block_for_index.cu  bm_conv.cu  bm_copy.cu  bm_execution_policy.cu  bm_for_index.cu  bm_main.cu  bm_matrix_mul.cu  bm_mem_copy.cu  bm_tensor_core.cu  bm_view.cu  conv_bm.cu  lambda_tensor_benchmark.cu  main.cu  mem_copy_benchmark.cu  prod_bm.cu  tensor_benchmark.cu  tensor_bm.cu
benchmark/heterogeneous/: algorithm_bm.cu  binary_operator_bm.cu  common_bm.cu  conv_bm.cu  for_each_bm.cu  lambda_tensor_bm.cu  main.cu  mem_bandwidth_bm.cu  mem_copy_bm.cu  operation.cu  stride_bm.cu  tensor_construct_bm.cu
benchmark/host/: CMakeLists.txt  bm_algorithm.cpp  bm_copy.cpp  bm_for_index.cpp  bm_view.cpp  mem_copy_benchmark.cpp  tensor_benchmark.cpp
ci/: linux-x64.jenkinsfile
cmake/: gcc-linaro-aarch64-linux.toolchain.cmake  gcc-linaro-arm-linux.toolchain.cmake  icc_x86_64.toolchain.cmake
data/: .gitattributes
dependency/: CMakeLists.txt
doc/: CI.md  build.md  heterogeneous.md  idear.md  keynote.md  one_and_zero.md  others.md  view.md
doc/computation_patterns/: keynote.md
dockerfile/: android-ndk-r14b.dockerfile  android-ndk-r16b.dockerfile  clang-ubuntu18.04.dockerfile  cuda10.1-ubuntu16.04.dockerfile  cuda10.1-ubuntu18.04.dockerfile  g++-aarch64-linux-gnu-ubuntu18.04.dockerfile  g++-arm-linux-gnueabihf-ubuntu18.04.dockerfile  g++-ubuntu18.04.dockerfile  gcc-linaro-7.4.1-2019.02-x86_64_aarch64-linux-gnu.dockerfile  gcc-linaro-7.4.1-2019.02-x86_64_arm-linux-gnueabihf.dockerfile  gcc-linaro-7.4.1-arm-linux-gnueabihf.dockerfile  gcc-ubuntu18.04.dockerfile  gcc5.dockerfile  gcc6-centos7.dockerfile  ndk-r14b.dockerfile  tensor-dev-cuda9.0-ubuntu16.04.dockerfile  tensor-dev-cuda9.0-ubuntu18.04.dockerfile  tensor-dev-g++4.8.5-centos7.dockerfile  tensor-dev-ubuntu18.04.dockerfile
example/: CMakeLists.txt  conv.cpp  conv_mult.cpp  image_utility.hpp  omp_policy.cpp  simd.cpp
example/cl/: CMakeLists.txt  simple0.cpp
example/cuda/: conv.cu  conv_multi.cu  for_index.cu  prod.cu
example/heterogeneous/: common.cu  image_preprocess.cu  mandelbrot.cu  preprocess_image.cu
example/opencl/: CMakeLists.txt  simple0.cpp
example/tutorial/: CMakeLists.txt  tutorial1.cpp  tutorial2.cpp  tutorial3.cpp  tutorial4.cpp  tutorial5.cpp  tutorial6.cpp  tutorial7.cpp
examples/: bgr2yuv.cu  conv.cu  omp_policy.cpp  preprocess_image.cu  prod.cu  simple1.cu  simple2.cu  simple3.cu  simple4.cu
examples/cuda/: bgr2yuv.cu  conv.cu  introduction.cu  preprocess_image.cu  prod.cu  simple0.cu  simple1.cu  simple2.cu  simple3.cu
examples/heterogeneous/: mandelbrot.cu  preprocess_image.cu
include/: mtensor.hpp
include/matazure/: algorithm.hpp  allocator.hpp  binary_operator.hpp  bm_config.hpp  bool_pack.hpp  common.hpp  complex.hpp  config.hpp  dynamic_tensor.hpp  exception.hpp  execution.hpp  for_border.hpp  for_index.hpp  function_traits.hpp  geometry.hpp  integer_sequence.hpp  io.hpp  lambda_tensor.hpp  layout.hpp  local_tensor.hpp  mem_copy.hpp  meta.hpp  omp_for_index.hpp  point.hpp  (+8 more)
matazure/: CMakeLists.txt  algorithm.hpp  bm_config.hpp  cl.hpp  common.hpp  config.hpp  conv.hpp  dynamic_tensor.hpp  exception.hpp  execution.hpp  io.hpp  iterator.hpp  meta.hpp  numeric.hpp  operation.hpp  operator.hpp  origami.hpp  point.hpp  serialization.hpp  simd.hpp  static_tensor.hpp  tensor  tensor.hpp  type_traits.hpp  unary.hpp
sample/: CMakeLists.txt  bench.cpp  bm_level_set.cu  image_helper.hpp  sample1.cpp  sample2.cpp  sample3.cu  sample4.cu  sample5.cpp  sample5_gradient.cpp  sample6_convolution.cu  sample6_convolution_halo.cu  sample7_matrix_mul.cu  sample_add.cu  sample_basic_structure.cpp  sample_for_index.cpp  sample_for_index.cu  sample_gradient.cpp  sample_image_split_channel.cpp  sample_keynote.cpp  sample_keynote.cu  sample_level_set.cpp  sample_level_set.cu  sample_level_set.hpp  sample_make_lambda.cpp  sample_mandelbrot.cpp  sample_mandelbrot.cu  sample_mandelbrot.hpp  sample_mask.cpp  sample_mask_bit.cpp  sample_matrix_mul.cu
samples/: CMakeLists.txt  add.cpp  mandelbrot.cu
script/: build-host.sh  build-linux-aarch64.sh  build-linux-arm.sh  build-linux-armv7.sh  build.sh  build_android.bat  build_android.sh  build_android_icc.sh  build_icc.sh  build_native.sh  build_win.bat  build_windows.bat  start_dev_docker.sh
test/: CMakeLists.txt  main.cpp  simd_ut.cpp  ut_foundation.hpp  ut_layout.cpp  ut_local_tensor.cpp  ut_local_tensor.hpp  ut_point.cu  ut_point.hpp  ut_tensor.hpp  ut_zero_and_one.cpp
test/cuda/: CMakeLists.txt  main.cu  ut_algorithm.cu  ut_execution.cu  ut_execution_policy.cu  ut_lambda_tensor.cu  ut_launch.cu  ut_meshgrid.cu  ut_nv_exe_check_disable.cu  ut_tensor.cu
test/heterogeneous/: common_ut.cpp  main.cu  tensor_ut.cu
test/view/: ut_basic.cu  ut_broadcast.cpp  ut_broadcast.hpp  ut_conv.cpp  ut_conv.hpp  ut_crop.hpp  ut_eye.cpp  ut_eye.hpp  ut_gather.cpp  ut_gather.hpp  ut_meshgrid.cpp  ut_meshgrid.hpp  ut_one.cpp  ut_one.hpp  ut_permute.cpp  ut_permute.hpp  ut_slice.cpp  ut_slice.hpp  ut_zero.cpp  ut_zero.hpp  ut_zip.cpp  ut_zip.hpp
(+80 files in other folders)
