execute_process(COMMAND git submodule update --init ${CMAKE_CURRENT_SOURCE_DIR})

include_directories(${CMAKE_CURRENT_SOURCE_DIR})
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/vendor/stb)

file(GLOB Files ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
foreach(File ${Files})
	set_source_files_properties(${File} PROPERTIES LANGUAGE CXX)
	get_filename_component(FileName ${File} NAME_WE)
	add_executable(${FileName} ${File})
	set_target_properties(${FileName} PROPERTIES LINKER_LANGUAGE CXX)
	# target_compile_features(${FileName} PRIVATE cxx_constexpr cxx_deleted_functions cxx_lambdas cxx_rvalue_references cxx_variadic_templates)
endforeach()

#add cuda example
if (WITH_CUDA)
	file(GLOB Files ${CMAKE_CURRENT_SOURCE_DIR}/cuda/*.cu)
	foreach(File ${Files})
		get_filename_component(FileName ${File} NAME_WE)
		set(TargetName cu_${FileName})
		CUDA_ADD_EXECUTABLE(${TargetName} ${File})
	endforeach()

	file(GLOB Files ${CMAKE_CURRENT_SOURCE_DIR}/heterogeneous/*.cu)
	foreach(File ${Files})
		get_filename_component(FileName ${File} NAME_WE)
		set(TargetName hete_cu_${FileName})
		CUDA_ADD_EXECUTABLE(${TargetName} ${File} OPTIONS -DUSE_CUDA)
	endforeach()
endif()

file(GLOB Files ${CMAKE_CURRENT_SOURCE_DIR}/heterogeneous/*.cu)
foreach(File ${Files})
	set_source_files_properties(${File} PROPERTIES LANGUAGE CXX)
	get_filename_component(FileName ${File} NAME_WE)
	set(TargetName hete_host_${FileName})
	if (WITH_CUDA)
		CUDA_ADD_EXECUTABLE(${TargetName} ${File} OPTIONS -DUSE_HOST)
	else()
		add_executable(${TargetName} ${File})
	endif()
	set_target_properties(${TargetName} PROPERTIES LINKER_LANGUAGE CXX)
	target_compile_definitions(${TargetName} PRIVATE USE_HOST)
	# target_compile_features(${TargetName} PRIVATE cxx_constexpr cxx_deleted_functions cxx_lambdas cxx_rvalue_references cxx_variadic_templates)
endforeach()

if(WITH_OPENCL)
	add_subdirectory(opencl)
endif()


add_subdirectory(tutorial)
