add_executable(tutorial1 ${CMAKE_CURRENT_SOURCE_DIR}/tutorial1.cpp)
add_executable(tutorial2 ${CMAKE_CURRENT_SOURCE_DIR}/tutorial2.cpp)
add_executable(tutorial3 ${CMAKE_CURRENT_SOURCE_DIR}/tutorial3.cpp)
add_executable(tutorial4 ${CMAKE_CURRENT_SOURCE_DIR}/tutorial4.cpp)
add_executable(tutorial5 ${CMAKE_CURRENT_SOURCE_DIR}/tutorial5.cpp)
add_executable(tutorial6 ${CMAKE_CURRENT_SOURCE_DIR}/tutorial6.cpp)
add_executable(tutorial7 ${CMAKE_CURRENT_SOURCE_DIR}/tutorial7.cpp)

